Renamed class PackModel to ContainerModel

--- a/vis-tool/src/app/2d/visualisation/visualisation.2d.component.html
+++ b/vis-tool/src/app/2d/visualisation/visualisation.2d.component.html
@@ -12,7 +12,7 @@
            (change)="fileUpload($event.target)">
 
     <div class="row" style="margin-top: 100px">
-      <canvas #myCanvas style="border: 5px solid black;"></canvas>
+      <canvas #containerCanvas style="border: 5px solid black;"></canvas>
     </div>
   </div>
 </div>
