--- a/visualizer/viewer/src/styles.css
+++ b/visualizer/viewer/src/styles.css
@@ -2,3 +2,11 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+body {
+  margin: 0px;
+  overflow: hidden;
+}
+canvas {
+  display: block;
+}
